fix: polygon parts marker position + cesium tools z-index

--- a/src/discrete-layer/views/discrete-layer-view.css
+++ b/src/discrete-layer/views/discrete-layer-view.css
@@ -218,3 +218,7 @@ body[dir='rtl'] .sideDetailsPanel {
 .cesium-viewer .sideToolsContainer {
   z-index: 5;
 }
+
+.cesium-viewer-fullscreenContainer , .cesium-viewer .toolsContainer {
+  z-index: 5;
+}
